--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ code {
     monospace;
 }
 .pokebola{
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,7 +60,13 @@ code {
   justify-content: center;
   border-radius: 0 0 10px 10px;
 }
-
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+button {
+  cursor: pointer;
+}
 .pokebola .pokeBottom .pokeInfo{
   display: flex;
   flex-direction: column;
@@ -70,7 +75,6 @@ code {
   justify-content: center;
   gap: 1em;
   padding: 1em;
-
 }
 .pokebola .pokeTop {
   padding: 1em;
